Apartado de alimentos

--- a/index.html
+++ b/index.html
@@ -312,13 +312,49 @@
  <div class="caja13">
         
     <div class="caja14">
-        <h2 class="texto8">Shop From</h2>
-        <h2 class="texto9"> Top Categories</h2>
+        <h2 class="texto8">Daily</h2>
+        <h2 class="texto9">Essentials</h2>
     </div>
 
     <div class="caja15">View All <img class="img33" src="./section/Arrow -.png" alt=""></div>
 
 </div>
+
+<div class="cajaAlimentos">
+<div class="cajaA">
+  <div class="fila4"><img class="canasta" src="./section/canasta.png" alt=""></div>
+  <div class="fila5"><span class="producto1">Daily Essentials</span> <h2 class="producto2">UP to 50% OFF</h2></div>
+</div>
+
+<div class="cajaA">
+    <div class="fila6"><img class="bolsaAlimentos" src="./section/bolsaAlimentos.png" alt=""></div>
+    <div class="fila5"><span class="producto1">Vegitables</span> <h2 class="producto2">UP to 50% OFF</h2></div>
+  </div>
+
+  <div class="cajaA">
+    <div class="fila6"><img class="canasta" src="./section/frutas.png" alt=""></div>
+    <div class="fila5"><span class="producto1">Fruits</span> <h2 class="producto2">UP to 50% OFF</h2></div>
+  </div>
+
+  <div class="cajaA">
+    <div class="fila6"><img class="canasta" src="./section/fresas.png" alt=""></div>
+    <div class="fila5"><span class="producto1">Strowberry</span> <h2 class="producto2">UP to 50% OFF</h2></div>
+  </div>
+
+  <div class="cajaA">
+    <div class="fila6"><img class="canasta" src="./section/mango.png" alt=""></div>
+    <div class="fila5"><span class="producto1">Mango</span> <h2 class="producto2">UP to 50% OFF</h2></div>
+  </div>
+
+  <div class="cajaA">
+    <div class="fila6"><img class="canasta" src="./section/cerezas.png" alt=""></div>
+    <div class="fila5"><span class="producto1">Cherry</span> <h2 class="producto2">UP to 50% OFF</h2></div>
+  </div>
+
+</div>
+
+
+
 
     </section>
 
